--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,26 +9,33 @@
 <body class="bg-gray-100 text-gray-800">
     <div class="container mx-auto p-4">
         <!-- Верхняя панель -->
-        <header class="bg-white shadow-md p-4 rounded-lg flex justify-between items-center">
-            <div>
-                <h1 class="text-2xl font-bold">Marketing assistant</h1>
-                <p class="text-gray-600">Добро пожаловать, {{ user }}!</p>
-		<p><strong>Текущий документ:</strong> {{ current_document_name }}</p>
-
-            </div>
-            <a
-            href="/upload"
-            class="w-full md:w-auto px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400"
-            >
-            Загрузить документ
-            </a>
-            <a
-                href="/logout"
+<header class="bg-white shadow-md p-4 rounded-lg flex justify-between items-center">
+    <div>
+        <h1 class="text-2xl font-bold">Marketing assistant</h1>
+        <p class="text-gray-600">Добро пожаловать, {{ user }}!</p>
+        <p><strong>Текущий документ:</strong> {{ current_document_name }}</p>
+        <form method="post" action="/delete" class="inline-block">
+            <button
+                type="submit"
                 class="text-sm text-white bg-red-500 px-4 py-2 rounded-lg hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-400"
             >
-                Выйти
-            </a>
-        </header>
+                Удалить документ
+            </button>
+        </form>
+    </div>
+    <a
+        href="/upload"
+        class="w-full md:w-auto px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400"
+    >
+        Загрузить документ
+    </a>
+    <a
+        href="/logout"
+        class="text-sm text-white bg-red-500 px-4 py-2 rounded-lg hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-400"
+    >
+        Выйти
+    </a>
+</header>
 
         <!-- Основное содержимое -->
         <main class="my-6 bg-white p-4 shadow-md rounded-lg">
@@ -51,6 +58,14 @@
                         </button>
                     </div>
             </form>
+
+{% if error %}
+<div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4">
+    <strong class="font-bold">Error:</strong>
+    <span class="block sm:inline">{{ error }}</span>
+</div>
+{% endif %}
+
 
             {% if question %}
             <div class="bg-gray-100 p-4 rounded-lg mb-4">
